--- a/metadata.yaml
+++ b/metadata.yaml
@@ -31,5 +31,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Science fiction'
 - !lcc 'PS'
+- GITenberg
 title: Vampires of Space
 url: http://www.gutenberg.org/ebooks/29353
